fix match reports dark mode

--- a/ArticleTemplates/assets/scss/themes/darkMode/_darkModeLiveblog.scss
+++ b/ArticleTemplates/assets/scss/themes/darkMode/_darkModeLiveblog.scss
@@ -4,7 +4,8 @@
     &.garnett--type-live,
     &.garnett--type-article.tone--deadBlog,
     &.garnett--type-specialreport.tone--deadBlog,
-    &.garnett--type-article.tone--football {
+    &.garnett--type-article.tone--football,
+    &.garnett--type-matchreport.tone--football {
         background-color: black;
 
         .article__body,
